# my_libero-infinity

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  tests.yml
assets/: architecture_diagram.md  perturbation_types.md
audit/: asset_parity_lerobot_libero-assets_0b3ea86b.json
docs/: api-reference.md  architecture.md  contributing.md  evaluation_pipeline.md  gym-wrapper.md  installation.md  interactive_viewer.md  observations-actions.md  perturbation_comparison.md  scenic_perturbations.md  scenic_primer.md  task-reversal.md  tutorial.md
examples/: 01_basic_eval.py  02_gym_wrapper.py  03_perturbation_axes.py  04_custom_vla.py  05_robo_eval_cli.sh  README.md
my_tests/: manual_keyboard_control.py  manual_libero_run.py  manual_libero_run_live.py  testcamera.py
my_tests/debug_keyboard_control/: obs_meta_reset.json
my_tests/debug_manual_env/: obs_meta_reset.json
my_tests/debug_manual_env_live/: obs_meta_reset.json
scenic/: background_perturbation.scenic  camera_perturbation.scenic  combined_perturbation.scenic  distractor_perturbation.scenic  libero_model.scenic  lighting_perturbation.scenic  object_perturbation.scenic  position_perturbation.scenic  robot_perturbation.scenic  verifai_position.scenic
scripts/: calibrate_drift.py  generate_cf_bddls.py  generate_gallery.py  generate_reversed_bddls.py  install_pinned_libero.py  rate_cf_bddls.py  rate_cf_bddls_llm.py  render_scene_images.py  run_asset_parity.py  verify_build.py  viewer.py
src/libero_infinity/: __init__.py  asset_registry.py  bddl_preprocessor.py  bootstrap.py  compiler.py  eval.py  grounding.py  gym_env.py  perturbation_audit.py  perturbation_policy.py  perturbation_policy_helpers.py  runtime.py  scene_semantics.py  simulator.py  task_config.py  task_reverser.py  task_semantics.py  validation_errors.py  vision_validation.py
src/libero_infinity/data/: __init__.py  asset_variants.json
src/libero_infinity/ir/: __init__.py  graph_builder.py  nodes.py  scene_graph.py
src/libero_infinity/planner/: __init__.py  axes.py  composition.py  position.py  types.py
src/libero_infinity/renderer/: __init__.py  scenic_renderer.py
tests/: conftest.py  test_e2e.py  test_grounding.py  test_gym.py  test_ir.py  test_libero.py  test_parity.py  test_perturbation_audit.py  test_perturbation_policy.py  test_planner.py  test_render_modes.py  test_renderer.py  test_scenic.py  test_settle_correctness.py  test_task_semantics.py  test_validation_loop.py  test_viewer.py
